--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,68 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Jey Kang
     - name: Date of Birth
-      value: 14th March 1879
+      value: 4th November 2002
     - name: Languages
-      value: English, German
+      value: English, Korean
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: BS
+      institution: The State University of New York, Korea
+      year: 2018 - 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - title: Major in Computer Science
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+            - 3.64/4.0 GPA
+            - Specialization in Artificial Intelligence
+    - title: Korean GED (검정고시)
+      year: 2015
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Intern
+      institution: NetID Co., Ltd
+      year: July 2020 - August 2020, December 2020 - February 2021
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Development of a machine learning-based file recommendation service
+        - Dataset management for client file access logs
+    - title: Undergraduate Researcher
+      institution: The State University of New York, Korea
+      year: August 2021 - December 2021
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Development of Computer Vision-based detection system for visible cracks in large structures
+      year: February 2020 - June 2020
       description:
+        - Development of FBM (flow-based model) for image colorization
+      year: October 2019 - December 2019
+      description:
+        - Development of NLP-based sentence compression algorithm
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Awards and Other Qualifications
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
+    - year: 2021
+      items:
+        - 107/120 TOEFL iBT Exam
+    - year: 2019
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - SKCS Coding Competition 1st Place
+    - year: 2018
       items: 
-        - Max Planck Medal
+        - Good Samaritan Award
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Driving simulation for autonomous vehicles
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Primary interest in using and improving sensor output from open-source simulators (i.e CARLA)
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> EDM production
