--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -33,6 +33,7 @@
         - Dataset management for client file access logs
     - title: Undergraduate Researcher
       institution: The State University of New York, Korea
+      year: 2019 - 2021
       description:
         - title: August 2021 - December 2021
           contents: Development of Computer Vision-based detection system for visible cracks in large structures
