fix year margins

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -27,7 +27,7 @@
   contents:
     - title: Intern
       institution: NetID Co., Ltd
-      year: July 2020 - August 2020, December 2020 - February 2021
+      year: 2020 - 2021
       description:
         - Development of a machine learning-based file recommendation service
         - Dataset management for client file access logs
